Fixed viewport zoomed out issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .site-logo {
-  width: 550px; /* Wraps site-links to new line */
+  min-width: 300px; /* Wraps site-links to new line */
   margin: 0;
   font: 1.875em/1.5 'Courier New';
   color: #247BA0;
